feature(file):增加几个小工具方法